--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+:root {
+    --main-color: #121321;
+    --text-color: #f3f5f5;
+}
 
 * {
     margin: 0;
@@ -11,11 +15,11 @@ section {
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background: #121321;
+    background: var(--main-color);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #f3f5f5;
+    color: var(--text-color);
     perspective: 1200px;
 }
 
@@ -51,11 +55,17 @@ section::after {
 .container:hover {
     transform: rotateY(180deg);
 }
+
+/*.container .back-face:hover .font-face {*/
+/*    visibility: hidden;*/
+/*}*/
+
 .container .card {
     height: 100%;
     width: 100%;
     padding: 25px;
     border-radius: 25px;
+    -moz-backdrop-filter: blur(25px);
     backdrop-filter: blur(25px);
     background: rgba(255,255,255,0.1);
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.25);
@@ -63,6 +73,7 @@ section::after {
     position: absolute;
     backface-visibility: hidden;
 }
+
 
 .font-face header,
 .font-face .logo{
@@ -162,4 +173,31 @@ h5 {
 .card.back-face h5 {
     font-size: 8px;
     margin-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    section::before {
+        height: 120px;
+        width: 120px;
+        transform: translate(-75px, -50px);
+    }
+
+    section::after {
+        height: 120px;
+        width: 120px;
+        transform: translate(75px, 50px);
+    }
+
+    .container {
+        height: 180px;
+        width: 320px;
+    }
+
+    .font-face .logo img {
+        width: 40px;
+    }
+
+    h5 {
+        font-size: 16px;
+    }
 }
